1.04 - 2010-04-03

* The functionality of Config::GitLike::Cascaded has been folded into
  Config::GitLike as a "cascade" option, and the subpackage is now
  deprecated. (alexmv)
* Config::GitLike::Git->new->load("/path/to/git") when the path is
  lacking a ".git", or is a bare repository, now works. (alexmv)
* Fixed a bug wherein the home directory config file would be loaded
  twice, causing all values to be multiple, if that was your cwd.
  Reported by rjbs. (alexmv)
* Allow explicitly calling ->load_file without previously having
  called ->load (alexmv)

1.03 - 2010-01-03

* Filter without replace_all should only replace the _first_ match (alexmv)
* Having a matching filter with multiple and not replace_all does mean
  replacement (alexmv)
* Fix a test that failed because multiple now works, and we're too smart
  (alexmv)
* Fix for when ->set_multiple called with no arguments (alexmv)

1.02 - 2009-08-19

* Bugfixes and extra tests for escaped \ and " in subsections (sunnavy)
* win32 fixes (sunnavy)
* auto-escape \ and " in subsections on set (sunnavy)

1.01 - 2009-08-11

* Fix breakage under Mouse due to Moose references
* New Config::GitLike::Git module for loading config
  files from the git locations
* various cleanups of Makefile.PL
* remove extraneous dep Regexp::Common

1.00 - 2009-07-08

* Initial release