@@ -3,7 +3,7 @@ name('Config-GitLike');
 all_from('lib/Config/GitLike.pm');
 repository('http://github.com/bestpractical/config-gitlike');
 
-requires 'Any::Moose';
+requires 'Moose';
 build_requires 'Test::More';
 build_requires 'Test::Exception';
 build_requires 'File::Spec';
